feat: Controllers and services reorganized
